<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ORXEncryptionFragment">

    <!--    <LinearLayout-->
    <!--        android:id="@+id/tabLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent">-->

    <!--        <TextView-->
    <!--            android:id="@+id/encodeTab"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="36dp"-->
    <!--            android:layout_weight="1f"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/text_encode"-->
    <!--            android:textSize="18sp"-->
    <!--            android:textStyle="bold"/>-->

    <!--        <TextView-->
    <!--            android:id="@+id/decodeTab"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="36dp"-->
    <!--            android:layout_weight="1f"-->
    <!--            android:gravity="center"-->
    <!--            android:text="@string/text_decode"-->
    <!--            android:textSize="18sp"-->
    <!--            android:textStyle="bold"/>-->

    <!--    </LinearLayout>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/orxTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_decode"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encode"/>

    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orxTabLayout">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/inputTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_input"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:autofillHints=""
                android:inputType="text"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/inputTitle"
                app:layout_constraintTop_toBottomOf="@+id/inputTitle"
                tools:ignore="LabelFor,SmallSp,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_decode"
                app:layout_constraintEnd_toStartOf="@+id/clean"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input" />

            <Button
                android:id="@+id/clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_clean"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/translate"
                app:layout_constraintTop_toBottomOf="@+id/input" />

            <TextView
                android:id="@+id/outputTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_output"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/translate" />

            <TextView
                android:id="@+id/output"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/outputTitle"
                app:layout_constraintTop_toBottomOf="@+id/outputTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>